--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ header > h2 {
   height: 4em;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: start;
 }
@@ -118,7 +119,8 @@ header > h2 {
   align-items: center;
 }
 
-#inner-bar > p {
+#game-time {
+  position: absolute;
   font-size: 2em;
   font-weight: bold;
 }
