--- a/style.css
+++ b/style.css
@@ -104,25 +104,27 @@ header > h2 {
   justify-content: start;
 }
 #inner-bar {
-  margin: 1em 0.6em;
+  margin: 0.6em 1em;
   background: rgb(255, 0, 0);
   background: linear-gradient(
     85deg,
     rgba(255, 0, 0, 1) 0%,
     rgba(31, 255, 0, 1) 100%
   );
-  height: 80%;
+  height: 100%;
   width: 100%;
   border-radius: 1em;
   display: flex;
   justify-content: center;
   align-items: center;
+  justify-items: center;
 }
 
 #game-time {
   position: absolute;
   font-size: 2em;
   font-weight: bold;
+  margin-top: 12px;
 }
 
 /* #high-scores {
