--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   justify-items: center;
   align-items: center;
   align-self: center;
+  overflow: hidden;
 }
 header,
 section {
@@ -55,13 +56,38 @@ header {
 
 header > h1 {
   font-size: 2em;
-  padding: 0.5em;
+  padding: 0.3em;
   color: white;
 }
 
 header > h2 {
   font-size: 1.5em;
-  margin: 0 1em 1em 1em;
+  margin: 0 1em 0 1em;
+}
+
+#mute-container {
+  position: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.unmuted {
+  background-image: url("./images/mute-inactive.png");
+  top: 10px;
+  right: 5px;
+  height: 40px;
+  width: 40px;
+  background-position: center;
+}
+.muted {
+  background-image: url("./images/mute-active.png");
+  background-position: center;
+  top: 10px;
+  right: 10px;
+  height: 30px;
+  width: 30px;
+  margin-top: 5px;
 }
 
 #subheading {
@@ -153,23 +179,28 @@ header > h2 {
   width: 100%;
 }
 
-#upgrades-container > img {
+#upgrades-container > div > img {
+  position: relative;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   height: 80px;
   width: 55px;
   filter: grayscale(80%);
+  z-index: 2;
+}
+
+#upgrades-container > div > img > p {
+  position: absolute;
+  font-weight: bold;
+  /* top: 60px; */
+  /* right: 20px; */
+  z-index: 50;
 }
 
 .upgrade-active {
   filter: grayscale(0%) !important;
 }
-/* #countdown-bar {
-} */
-
-/* #high-scores {
-} */
 
 #clickable-image {
   background-image: url(./images/david-cameron.png);
@@ -195,6 +226,89 @@ header > h2 {
   color: white;
   background-color: darkgray;
   padding: 0.2em;
+}
+
+#game-over {
+  visibility: hidden;
+  position: absolute;
+  background-color: darkslategrey;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+  padding: 100px 30px;
+}
+
+.game-over-overlay {
+  visibility: visible !important;
+}
+
+#eog-title-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px white solid;
+  border-radius: 2em;
+}
+
+#eog-title-container > h1 {
+  margin: 1em;
+  font-size: 2em;
+  color: white;
+}
+
+#eog-title-container > p {
+  margin: 1em;
+}
+
+#btn-restart {
+  margin: 0 20%;
+  padding: 1em;
+  border-radius: 1em;
+}
+
+#btn-high-score {
+  position: absolute;
+  bottom: 20%;
+  right: 0%;
+  height: 10em;
+  width: 3em;
+  border-radius: 1em 0 0 1em;
+  z-index: 300;
+}
+
+#btn-high-score > span {
+  font-weight: bold;
+  /* text-orientation: mixed; */
+  writing-mode: vertical-rl;
+}
+
+#high-score-page {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: darkslategrey;
+  height: 100vh;
+  width: 100vw;
+  z-index: 200;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
+.high-score-overlay {
+  visibility: visible !important;
+}
+
+#high-score-page > h1 {
+  margin: 1em;
+  font-size: 2em;
+  color: white;
+}
+
+.high-score-item {
+  margin: 0.5em;
 }
 
 @media (min-width: 750px) and (orientation: landscape) {
