--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   height: 100vh;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 1fr 2fr 6fr 1fr;
+  grid-template-rows: 1fr 1fr 4fr 2fr;
   grid-template-areas:
     " heading heading heading heading heading heading"
     " . countdown countdown countdown countdown ."
@@ -35,7 +35,6 @@ body {
   justify-content: center;
   justify-items: center;
   align-items: center;
-  align-self: center;
   overflow: hidden;
 }
 header,
@@ -44,8 +43,11 @@ section {
 }
 
 header {
+  position: relative;
   grid-area: heading;
   background-color: darkslategray;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   /* border: 1px solid white; */
@@ -53,14 +55,17 @@ header {
 }
 
 header > h1 {
+  margin: 0.4em;
   font-size: 2em;
-  padding: 0.3em;
   color: white;
 }
 
 header > h2 {
+  background-color: lightgrey;
+  border-radius: 1em;
   font-size: 1.5em;
-  margin: 0 1em 0 1em;
+  padding: 0.5em;
+  margin: 0 0.5em 0 0.5em;
 }
 
 #mute-container {
@@ -90,7 +95,7 @@ header > h2 {
 
 #score-container {
   /* color: black; */
-  margin-bottom: 0.4em;
+  margin: 0.4em;
 }
 
 #subheading {
@@ -116,17 +121,17 @@ header > h2 {
   grid-area: middle;
   background-image: url(./images/bg-image-1024x681.webp);
   background-position: center;
-  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 100%;
 }
 
 #countdown-bar {
   position: relative;
-  grid-area: countdown;
   background-color: darkslategray;
   border-radius: 1em;
-  height: 4em;
+  height: 2em;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -135,70 +140,90 @@ header > h2 {
 }
 
 #inner-bar {
+  position: static;
   background: rgb(255, 0, 0);
   background: linear-gradient(
     85deg,
     rgba(255, 0, 0, 1) 0%,
     rgba(31, 255, 0, 1) 100%
   );
-  height: 100%;
+  height: 4em;
   width: 100%;
   border-radius: 1em;
 }
 
 #game-time {
   left: 45%;
-  top: 2px;
+  bottom: 6px;
   position: absolute;
-  font-size: 2em;
+  font-size: 1em;
   font-weight: bold;
   margin-top: 12px;
 }
 
 /* #high-scores {
-  grid: countdown;
-  background-color: red;
-  height: 100%;
-  width: 100%;
-} */
+    grid: countdown;
+    background-color: red;
+    height: 100%;
+    width: 100%;
+  } */
 
 #bottom {
+  display: flex;
+  justify-content: stretch;
+  align-content: stretch;
+  align-items: stretch;
+  flex-direction: column;
   grid-area: bottom;
+  height: 100%;
 }
 
-#bottom > h3 {
+#bottom > h2 {
   color: white;
+  font-size: 2em;
 }
 
 #multiplier-container {
   color: white;
-  margin: 1em;
+  margin: 0.2em;
 }
 
 #upgrades-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   background-color: darkslategray;
-  width: 100%;
-  gap: 1em;
+  height: auto;
+  width: auto;
+  padding: 1em 0;
 }
 
 #upgrades-container img {
+  position: relative;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 80px;
-  width: 55px;
+  height: 70px;
+  width: 50px;
   z-index: 2;
 }
 
 #upgrades-container p {
+  position: relative;
   font-weight: bold;
-  margin: 0.5em 0 0 0;
   z-index: 50;
+  color: white;
+  margin-top: -10px;
+}
+
+#multiplier-number {
+  background-color: black;
+  border-radius: 1em;
+  z-index: 10;
+  margin-top: -20px;
+  padding: 0.2em;
 }
 
 .obscured {
@@ -206,18 +231,16 @@ header > h2 {
 }
 
 #clickable-image {
-  background-image: url(./images/david-cameron.png);
+  background-image: url(./images/question-mark.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 400px;
-  width: 250px;
-  -webkit-filter: drop-shadow(0px 0px 10px #fff);
-  filter: drop-shadow(0px 0px 10px #fff);
+  width: 300px;
+  filter: drop-shadow(0px 0px 10px darkslategray);
 }
 
 #clickable-image:hover {
-  -webkit-filter: drop-shadow(0px 0px 5px #222);
   filter: drop-shadow(0px 0px 5px #222);
 }
 
@@ -226,9 +249,12 @@ header > h2 {
 }
 
 #bottom > p {
-  color: white;
-  background-color: darkgray;
-  padding: 0.3em;
+  background-color: lightgray;
+  align-self: center;
+  color: black;
+  margin: 1em 1em;
+  border-radius: 1em;
+  padding: 0.6em;
 }
 
 #game-over {
@@ -271,11 +297,11 @@ header > h2 {
 
 #btn-high-score {
   position: absolute;
-  bottom: 20%;
-  right: 0%;
-  height: 10em;
+  top: 3%;
+  left: 0%;
+  height: 8em;
   width: 3em;
-  border-radius: 1em 0 0 1em;
+  border-radius: 0 1em 1em 0;
   z-index: 300;
 }
 
@@ -298,6 +324,7 @@ header > h2 {
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  overflow: scroll;
 }
 
 .high-score-overlay {
@@ -310,10 +337,17 @@ header > h2 {
   color: white;
 }
 
+#high-scores-container {
+  display: flex;
+  flex-direction: column-reverse;
+  margin: 1em;
+}
+
 .high-score-item {
   font-size: 2em;
   margin: 0.5em;
 }
+
 #eog-faces {
   display: inline;
 }
@@ -324,26 +358,43 @@ header > h2 {
   width: auto;
 }
 
-@media (min-width: 750px) and (orientation: landscape) {
+@media (min-width: 500px) and (orientation: landscape) {
   body {
+    margin: 0 auto;
+    max-width: 1000px;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: 1fr 1fr 6fr 1fr;
-    grid-column-gap: 1em;
-    grid-row-gap: 1em;
     grid-template-areas:
       ". heading heading heading heading heading heading ."
       ". . . countdown countdown . . ."
       ". middle middle middle middle middle middle ."
       ". bottom bottom bottom bottom bottom bottom .";
   }
-  #inner-bar {
-    margin: 0.8em 0.3em;
+
+  #score-container {
+    font-size: 2em;
   }
-  #upgrades-container > img {
+
+  #countdown-bar {
+    height: 2em;
+  }
+  /* 
+  #countdown-bar > p {
+    font-size: 1.5em;
+  } */
+
+  #clickable-image {
+    height: 400px;
+    width: 250px;
+  }
+
+  #upgrades-container img {
+    height: 100px;
+    width: 100%;
+  }
+
+  #upgrades-container > upgrade-item > img {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 120px;
-    width: 90px;
   }
 }
